# synapse-interact

./: actions.py  config.json  config.py  matrix_interact.py  pyproject.toml  synapse_interact.py  synapse_manager.py
api/: matrix_interact.py
api/error/: error_to_description.py  matrix_error.py
api/requests/: matrix_interact.py  synapse_manager.py
api/utils/: utils.py
