[tool.poetry]
name = "synapseinteract"
version = "0.1.0"
description = ""
authors = ["Victor Misael <misael1805@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
requests = "^2.31.0"
beautifultable = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
